crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_function.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 16
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Url",
    "len": 83
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 16
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "String",
    "len": 17
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 16
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "String",
    "len": 17
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
