crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_ie_prodid.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 16
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 5
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 16
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 6
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
