crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_important.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 4,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 4,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "px"
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "String",
    "len": 2
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 2
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 2
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
