crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_prop.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "LeftParen",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 4,
    "unit": "%"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
