crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_quotes.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "String",
    "len": 12
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "String",
    "len": 7
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
