crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_rule_at.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 4,
    "unit": "px"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 6
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 6
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "px"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
